# maho

./: .dockerignore  .gitignore  README.md  example.env  justfile  models.py  prompt_migration_audit.md  pyproject.toml  pyrightconfig.json  pytest.ini  upstream_analysis.md
docker/base/: Dockerfile
docker/run/: Dockerfile  Dockerfile.simple  build-optimized.sh  docker-compose.cuda.yml  docker-compose.yml
docs/: README.md  architecture.md  contribution.md  cuda_docker_setup.md  installation.md  mcp_setup.md  quickstart.md  troubleshooting.md  tunnel.md  usage.md
instruments/default/yt_download/: yt_download.sh
prompts/agents/default/: system.j2
prompts/default/: agent.system.behaviour_default.md  agent.system.instruments.md  agent.system.main.communication.md  agent.system.main.environment.md  agent.system.main.md  agent.system.main.role.md  agent.system.main.solving.md  agent.system.main.tips.md  agent.system.memories.md  agent.system.solutions.md  agent.system.tool.browser.md  agent.system.tool.code_exe.md  agent.system.tool.knowledge.md  agent.system.tool.memory.md  agent.system.tool.scheduler.md
prompts/hacker/: agent.system.main.environment.md  agent.system.main.role.md
prompts/research_agent/: agent.system.main.communication.md  agent.system.main.deep_research.md  agent.system.main.environment.md  agent.system.main.md  agent.system.main.role.md
scripts/: preload.py  prepare.py  start_tunnel.py  start_ui.py
src/api/: chat_export.py  chat_load.py  chat_remove.py  chat_reset.py  ctx_window_get.py  delete_work_dir_file.py  download_work_dir_file.py  file_info.py  get_work_dir_files.py  health.py  history_get.py  image_get.py  import_knowledge.py  mcp_server_get_detail.py  mcp_server_get_log.py  mcp_servers_apply.py  mcp_servers_status.py  message.py  message_async.py  models.py  nudge.py  pause.py  poll.py  restart.py  rfc.py  router.py  scheduler_task_create.py  scheduler_task_delete.py  scheduler_task_run.py  scheduler_task_update.py  scheduler_tasks_list.py  scheduler_tick.py  settings_get.py  settings_set.py  test_connection.py  transcribe.py  tunnel.py  tunnel_proxy.py  upload.py  upload_work_dir_files.py
src/config/: initialization.py
src/core/: agent.py  context.py  models.py
src/helpers/: api.py  async_compat.py  attachment_manager.py  brave_search.py  browser.py  browser_use.py  cloudflare_tunnel._py  crypto.py  defer.py  docker.py  document_query.py  errors.py  extension.py  extract_tools.py  faiss_monkey_patch.py  file_browser.py  files.py  git.py  history.py  job_loop.py  knowledge_import.py  localization.py  mcp_handler.py  mcp_server.py  memory.py  messages.py  perplexity_search.py  persist_chat.py  playwright.py  print_catch.py  print_style.py  process.py  prompt_engine.py  rag.py  rate_limiter.py  rfc.py  rfc_exchange.py  runtime.py  searxng.py  settings.py  (+6 more)
src/providers/: __init__.py  base.py  factory.py
src/tools/: behaviour_adjustment.py  browser._py  browser_agent.py  browser_do._py  browser_open._py  call_subordinate.py  code_execution_tool.py  document_query.py  input.py  knowledge_tool.py  memory_delete.py  memory_forget.py  memory_load.py  memory_save.py  response.py  scheduler.py  search_engine.py  task_done.py  unknown.py  vision_load.py  webpage_content_tool.py
tests/: README.md  integration_test.py  test_integration.py
webui/: ascii-art.txt  index.css  index.html  index.js  package.json  tailwind.config.js
webui/css/: toast.css
webui/js/: chat-core.js  core-utils.js  file-management.js  file_browser.js  history.js  messages.js  polling-system.js  scheduler.js  settings.js  speech.js  speech_browser.js  task-management.js  time-utils.js  toast-system.js  tunnel.js  ui-layout.js
webui/src/: input.css
webui/styles/: animations.css  base.css  blank_state.css  chat.css  components.css  dragdrop.css  file_browser.css  layout.css  markdown.css  modals.css  responsive.css  scheduler.css  settings.css  sidebar.css  theme.css  utility.css
(+111 files in other folders)
